responsivestyle.css
body{
    font-family: 'Raleway', sans-serif;
    margin: 0;
    font-size: 17px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
  
}

#wrapper{
   width: 100%;
    
}

/**********header********/
#logo{
    height: 50px;
    margin-left: 20px;
    margin-top: 25px;
}


header{
    align-items: center;
    
}

header ul{
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    align-content: stretch;
    margin: 0;
    padding: 0;
    height: 90px;
}

header ul li{
    list-style-type: none;
    border-bottom : 4px solid lightgrey;
    width: 50%;
    text-align: center;
    cursor: pointer;
    margin-top: 20px;
    height: 40px;
}

header ul li a{
    text-decoration: none;
    height: 40px;
    display: inline-block;
    color: black;
    width: 90%;
}

nav li:hover  {
    border-bottom: 4px solid #0065FC;
}

nav li:hover a{
    color: #0065FC;
}

nav li:last-child{
    border: none;
    position: absolute;
    top: 25px;
    right: 20px;
    margin-left: 170px;
    text-align: end;
}

header li:last-child a {
    color: #0065FC;
    font-weight: bold;
}

/******************/
section{
    width: 85%;
    margin: auto;
}

section h1{
    margin-top: 5px;
}


 /*************recherche**********/

 #recherche{
    display: flex;
    flex-direction: row;
    margin-top:35px;
  }
  
#searchicon{
    border-radius: 15px 0 0 15px;
    background-color: #F2F2F2;
    height: 55px;
    width: 15%; 
     
  }


#recherche img{
      height: 20px;
      position: relative;
      left: 20px;
      top: 17px;
     overflow: visible;  
  }
  
#searchbtn{
      display: inline-block;
      height: 55px;
      width: 15%;
      background-color: #0065FC;
      color: white;
      border : none;
      border-radius : 15px 15px 15px 15px;
      cursor : pointer;
      position: relative;
      right: 17px;
      font-size: 7px;
     }
  
#searchbtn span{
    display: none;
}
  
#searchtext{
      height: 55px;
      width: 70%;
      padding: 0 5px 0 15px;
      border: 1px solid #F2F2F2;
      text-overflow: ellipsis;
      font-size: 20px;
     
  }




#searchtext::placeholder{
    font-size: 20px;
    color: black;
    font-weight: bold;
}

/*************filtres*************/

#divfilters{
    display: flex;
    flex-flow: column;
    align-items: baseline;
    font-weight: bolder;
    margin-top: 30px;
}

#divfilters label{
   font-size: 20px;
}
#listfilters{
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 0;
    height: 100%;
    list-style-type: none;
    margin: 25px 0 13px 0;
}

.filter{
    height: 50px;
    border: 2px solid #F2F2F2;
    border-radius:  50px;
    text-align: center;
    line-height: 50px;
    cursor: pointer;
    padding-left: 10px;
    padding-right: 20px;
    margin-bottom : 10px;
    
}

#cbfilter{
    margin: 0;
    padding: 0;
}


.filterlogo{
   display: inline-block;
    width : 52px;
    height: 52px;
    border-radius : 50% 50%;
    background-color:  #DEEBFF;
    position: relative;
    right: 11px;
    bottom: 1px;
    
}

.filterlogo i{
    color: #0065FC;
}

.filter:hover {
    background-color: #F2F2F2;  
}

.filter:hover .filterlogo{
    float: right;
    right: -24px;
}

/***************info***********/
 
#info{
    display: flex;
    flex-direction: row;
    align-items: baseline;
    
}

.fa-info{
    border: 1px solid lightgrey;
    border-radius: 50%;
    width: 28px;
    height: 22px;
    position: relative;
    bottom: 3px;
    color: #0065FC;
    margin-right: 5px;
}

.fa-info::before{
  position: relative;
  left: 8px;
  font-size: 12px;
  
}

/*section hébergements*/

#hebergements{
    display: flex;
    flex-direction: column-reverse;
    flex-wrap: wrap;
    justify-content: space-between;
    
}

#sectionPrincipale{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: auto;
    
    
}

#sectionPrincipale h2{
    width: 93%;
    margin: 45px 0 20px 0;
}


#hebergements aside{
    width: 100%;
    align-items: center;
    background-color: #F2F2F2;
    display: flex;
    flex-direction: column;
    align-content: space-between;
    margin: 25px 0 0 0;
    padding-bottom: 30px;

}

#affichezplus{
   font-size: 20px;
    margin: 20px 0 30px 0;
}


/*cards section principale*/

.cards{
    width: 94%;
    height: 210px;
    border-radius: 15px;
    background-size: cover;
    box-shadow: 0 4px 8px 0 rgba(137, 137, 137, 0.2);
    margin: auto;
    border: 6px solid white;
    margin-bottom: 10px;
}

.imgcaption{
    height: 30%;
    width: 96%;
    justify-content: end;
    background-color: white;
    position: relative;
    top: 130px;
    right: 3px;
    border-radius: 0 0 15px 15px;
    padding: 10px;
}

.imgcaption p{
    margin:0;
   line-height: 1.5em;
   font-size: 15px;
}

.imgcaption h3{
    margin:0;
    font-size: 17px;
}
.cards i{
   
    font-size: 12px;
    letter-spacing: -4px;
    

}

.blue{
    color: #0065FC;;
}

.grey{
    color: lightgrey;
}


/*background cards section principale*/

#cannebiere{
    background-image: url("images/hebergements/marcus-loke-WQJvWU_HZFo-unsplash.jpg");
    background-position-y: -50px; 
}

#port{
    background-image: url('images/hebergements/fred-kleber-gTbaxaVLvsg-unsplash.jpg');
    background-position-y: -50px;
    
}

#mouettes{
    background-image: url("images/hebergements/reisetopia-B8WIgxA_PFU-unsplash.jpg");
    background-position-y: -50px;
}

#mer{
    background-image: url("images/hebergements/annie-spratt-Eg1qcIitAuA-unsplash.jpg");
    background-position-y: -100px;
}

#panier{
    background-image: url("images/hebergements/nicate-lee-kT-ZyaiwBe0-unsplash.jpg");
    background-position-y: -30px;
}

#amina{
    background-image: url("images/hebergements/febrian-zakaria-M6S1WvfW68A-unsplash.jpg");
    background-position-y: -200px;
}


/*************aside cards********/
#headeraside{
    display: flex;
    justify-content: space-between;
    width: 80%;
    align-items: baseline;
    margin-bottom: 20px;
}

#headeraside h2{
    margin: 45px 0 0 0;

}

.asidecards{
    width: 80%;
    height: 150px;
    margin: auto;
    box-shadow: 0 4px 8px 0 rgba(137, 137, 137, 0.2);
    border-radius: 25px;
    border : 6px solid white;
    background-size: cover;
    margin-bottom: 10px;
    

}

.asidecards p{
    margin: 0;
    font-size: 15px;
    white-space: nowrap;
}

.asidecards i{
    font-size: 12px;
    position: relative;
    top: 30px;
    letter-spacing: -4px;

}

.caption{
    background-color: white;
    height: 120px;
    width: 50%;
    float: right;
    border-radius: 0px 25px 25px 0;
    position: relative;
    bottom: 4px;
    left: 3px;
    padding: 20px 20px 20px 20px;
}

.caption h3{
   margin: 0;
   font-size: 17px;
}

.textEllipsis{
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

#matin{
    background-image: url("images/hebergements/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg");
    background-position-x: -50px;
    background-size: contain;
}

#eau{
    background-image: url("images/hebergements/aw-creative-VGs8z60yT2c-unsplash.jpg");
    background-size: contain;
    background-position-x: -40px;
}

#bleu{
    background-image: url("images/hebergements/febrian-zakaria-sjvU0THccQA-unsplash.jpg");
    background-size: 150px;
    background-position-y: -30px;

}

/****************activités******************/

#activites{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-top: 10px;
}

figure{
    width: 95%;
    height: 200px;
    border-radius: 15px;
    box-shadow: 0 4px 8px 0 rgba(137, 137, 137, 0.2);
    margin: auto;
    margin-bottom: 20px;
}

#activites h2{
    width: 100%;
   padding-bottom: 20px;
}


#activites figcaption{
    background-color: white;
    height: 40px;
    position: relative;
    top: 142px;
    border-radius: 0 0 15px 15px;
    margin: 0;
    padding: 20px 0 0 20px;
    font-size: 17px;
    font-weight: bold;
}


#vieuxport{
    background-image: url("images/activites/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg");
    background-size:cover;
}


#pomegues{
    background-image: url("images/activites/paul-hermann-QFTrLdQIRhI-unsplash.jpg");
    background-position-y: -170px;
}



#frioul{
    background-image: url("images/activites/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg");
    background-position-y: -15px;
    background-size: cover;
}

#calanques{
    background-image: url("images/activites/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg");
    background-position-y: -20px;
    background-size: cover;
}


#garde{
    background-image: url("images/activites/florian-wehde-xW9e8gdotxI-unsplash.jpg");
    background-position-y: -15px;
    background-size: cover;
}



#longchamp{
    background-image: url("images/activites/lena-paulin-wH2-EJoDcV0-unsplash.jpg");
    background-position-y: -30px;
    background-size: cover;
}

/**************footer**********/
footer{
   
    background-color: #F2F2F2; 
    margin-top: 70px;
}

footer h3{
    margin: 50px 0 0 0;
}

footer div{
    width: 80%;
    margin: auto;
}

footer ul{
    padding: 0;
    line-height: 1.7em;
}

footer li{
    list-style: none;
}

footer a{
    text-decoration: none;
    color: black;
}

footer a:hover{
    color : #0065FC;
}

